Completed User create system

--- a/DealsNet/web.config
+++ b/DealsNet/web.config
@@ -20,7 +20,8 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <allow users="*" />
     </authorization>
     <httpHandlers>
-    	<add verb="*" path="HelloWorld" type="DealsNet.HelloWorld,DealsNet" />
+      <add verb="*" path="HelloWorld" type="DealsNet.HelloWorld,DealsNet" />
+      <add verb="*" path="CreateUser" type="DealsNet.UserAuth,DealsNet" />
     </httpHandlers>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <sessionState mode="InProc" cookieless="false" timeout="20" />
