Renaming UserAuth to Create User, adding utilities for checking user authentication

--- a/DealsNet/web.config
+++ b/DealsNet/web.config
@@ -10,6 +10,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
   <system.web>
     <compilation defaultLanguage="C#" debug="true">
       <assemblies>
+        <add assembly="Microsoft.CSharp, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
     <customErrors mode="RemoteOnly">
@@ -21,7 +22,7 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     </authorization>
     <httpHandlers>
       <add verb="*" path="HelloWorld" type="DealsNet.HelloWorld,DealsNet" />
-      <add verb="*" path="CreateUser" type="DealsNet.UserAuth,DealsNet" />
+      <add verb="*" path="CreateUser" type="DealsNet.CreateUser,DealsNet" />
     </httpHandlers>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <sessionState mode="InProc" cookieless="false" timeout="20" />
