--- a/DealsNet/DealsNet.csproj
+++ b/DealsNet/DealsNet.csproj
@@ -69,8 +69,9 @@
       <DeployService-Deploy>True</DeployService-Deploy>
     </Compile>
     <Compile Include="HttpDbClient.cs" />
-    <Compile Include="UserAuth.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="CreateUser.cs" />
+    <Compile Include="DbUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
