--- a/DealsNet/web.config
+++ b/DealsNet/web.config
@@ -23,6 +23,8 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
     <httpHandlers>
       <add verb="*" path="HelloWorld" type="DealsNet.HelloWorld,DealsNet" />
       <add verb="*" path="CreateUser" type="DealsNet.CreateUser,DealsNet" />
+      <add verb="*" path="CreateDeal" type="DealsNet.CreateDeal,DealsNet" />
+      <add verb="*" path="FindDeal" type="DealsNet.FindDeal,DealsNet" />
     </httpHandlers>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <sessionState mode="InProc" cookieless="false" timeout="20" />
