--- a/DealsNet/web.config
+++ b/DealsNet/web.config
@@ -25,6 +25,8 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <add verb="*" path="CreateUser" type="DealsNet.CreateUser,DealsNet" />
       <add verb="*" path="CreateDeal" type="DealsNet.CreateDeal,DealsNet" />
       <add verb="*" path="FindDeal" type="DealsNet.FindDeal,DealsNet" />
+      <add verb="*" path="ExpressFeelings" type="DealsNet.ExpressFeelings,DealsNet" />
+      <add verb="*" path="GetAllDeals" type="DealsNet.GetAllDeals,DealsNet" />
     </httpHandlers>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <sessionState mode="InProc" cookieless="false" timeout="20" />
